correct password regex and spacing

--- a/css/mickeyLogin.css
+++ b/css/mickeyLogin.css
@@ -112,6 +112,7 @@
     width: 100%;
     border: 0;
     margin: 0 0 15px;
+    margin-bottom: 2px;
     padding: 15px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -153,6 +154,7 @@
   .form-text{
     color:red;
     visibility: hidden;
+    margin-bottom: 15px;
 
   }
 
@@ -266,6 +268,7 @@
     width: 90%;
     border: 0;
     margin: 5% 0 0;
+    margin-bottom:2px;
     padding: 5%;
     border-radius: 5px;
     box-sizing: border-box;
@@ -303,6 +306,7 @@
   .form-text{
     color: red;
     visibility: hidden;
+    margin-bottom: 10px;
   }
 
   .form .btn-login:hover{
